# rag-beginner-basics

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
data/sample_texts/: artificial_intelligence.txt  cloud_computing.txt  machine_learning.txt  python_programming.txt
docs/: 01.DOCUMENT_LOADER_EXPLANATION.md  02.CHUNKER_EXPLANATION.md  03.EMBEDDER_EXPLANATION.md  04.VECTOR_STORE_EXPLANATION.md  05.RAG_PIPELINE_EXPLANATION.md  06.MAIN_EXPLANATION.md  07.END_TO_END_RAG_FLOW.md  08.TESTING_THE_CLI.md  TRAINING_GUIDE.md
rag_beginner_basics/: __init__.py  __main__.py  chunker.py  document_loader.py  embedder.py  main.py  rag_pipeline.py  vector_store.py
tests/: test_chunker.py  test_document_loader.py  test_vector_store.py
